--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>                
             </div>
             <footer>
-                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2024</span> www.thinkeuros.de</p>
+                <p class="small tm-copyright-text">&copy; <span class="tm-current-year">2024</span> www.thinkeuros.de</p>
             </footer>
         </div> <!-- .tm-main-content -->  
     </div>
