--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-12">
-                                                        <form action="index.html" method="post" class="contact-form">
-							    <input type="hidden" name="access_key" value="9907c922-9d02-48a1-8b0b-e2de7a5459da"/>
+                                                        <form action="https://api.web3forms.com/submit" method="post" class="contact-form">
+							    <input type="hidden" name="access_key" value="9907c922-9d02-48a1-8b0b-e2de7a5459da" />
                                                             <div class="row">
                                                                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                                                                   <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name"  required/>
